# GameBoyEmu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cpu.cpp  Cpu.h  Device.h  Emulator.cpp  Emulator.h  Opcodes.cpp  README.md  Ram.cpp  Ram.h  Ram.tpp  build_and_run.sh  generate_jump_table.py  main.cpp
cpp_src/: Cpu.cpp  Opcodes.h  Ram.cpp  main.cpp
scripts/: build_and_run.sh  display_logo.py  generate_jump_table.py  op_code_confirmations.py  python_scripts.py  run_tests.sh
src/: Cpu.cpp  Cpu.h  FetchDecode.cpp  FetchDecode.h  GameBoy.h  Opcodes.cpp  Opcodes.h  Ram.cpp  Ram.h  fetch_decode.cpp  fetch_decode.h  main.cpp
src/core/: Cpu.cpp  Cpu.h  DataBus.cpp  DataBus.h  Emulator.cpp  Emulator.h  GameBoy.cpp  GameBoy.h  Memory.cpp  Memory.h  Ppu.cpp  Ppu.h  Ram.cpp  Ram.h
src/executors/: Cpu.cpp  Cpu.h  Emulator.cpp  Emulator.h  GameBoy.cpp  GameBoy.h  Ppu.cpp  Ppu.h
src/instructions/: FetchDecode.cpp  FetchDecode.h  Opcodes.cpp  Opcodes.h
src/memory/: Cartridge.cpp  Cartridge.h  DataBus.cpp  DataBus.h  IORegisters.cpp  Memory.cpp  Memory.h  ROMandRAM.cpp
tests/: CMakeLists.txt  tests.cpp  tests_fetch_decode.cpp
